--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+
+
+    "preview": "vite preview","predeploy": "npm run build"  , 
+   "deploy": "gh-pages -d build"
   },
+  
+
+  "homepage": "https://aag2004.github.io/Financtionary/",
+
+  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
