--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "homepage": "https://aag2004.github.io/Financtionary/",
   "name": "financtionary",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -39,5 +38,6 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.3.1"
-  }
+  },
+  "homepage": "https://aag2004.github.io/Financtionary/"
 }
