--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://aag2004.github.io/Financtionary/",
   "name": "financtionary",
   "private": true,
   "version": "0.0.0",
@@ -38,6 +38,5 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.3.1"
-  },
-  "homepage": "https://aag2004.github.io/Financtionary/"
+  }
 }
