--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.0",
         "react-slick": "^0.30.1",
+        "gh-pages": "^6.1.1",
         "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
